--- a/Fronte_End/pages/adminPages/Supplier.html
+++ b/Fronte_End/pages/adminPages/Supplier.html
@@ -381,8 +381,8 @@
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="S_category">Category</label>
                                     <select class="form-control" id="S_category" name="S_category">
-                                        <option>Local</option>
-                                        <option>Internation</option>
+                                        <option value="LOCAL">LOCAL</option>
+                                        <option value="INTERNATIONAL">INTERNATIONAL</option>
 
                                     </select>
                                     <!--                  <input type="text" name="lastName" class="form-control" id="lastName"-->
@@ -519,12 +519,12 @@
                                         <th scope="col">Supplier name</th>
                                         <th scope="col">Category</th>
                                         <th scope="col">Gender</th>
-                                        <th scope="col">Address Line 01</th>
-                                        <th scope="col">Address Line 02</th>
-                                        <th scope="col">Address Line 03</th>
-                                        <th scope="col">Address Line 04</th>
-                                        <th scope="col">Address Line 05</th>
-                                        <th scope="col">Address Line 06</th>
+                                        <th scope="col">Address</th>
+<!--                                        <th scope="col">Address Line 02</th>-->
+<!--                                        <th scope="col">Address Line 03</th>-->
+<!--                                        <th scope="col">Address Line 04</th>-->
+<!--                                        <th scope="col">Address Line 05</th>-->
+<!--                                        <th scope="col">Address Line 06</th>-->
                                         <th scope="col">Contact 01</th>
                                         <th scope="col">Contact 02</th>
                                         <th scope="col">Email</th>
