--- a/Fronte_End/pages/adminPages/Supplier.html
+++ b/Fronte_End/pages/adminPages/Supplier.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -363,139 +364,89 @@
                     </div>
                     <!-- End Search Bar -->
                     <div class="col-12 m-3 p-1">
-                        <form class="row" id="customerForm">
+                        <form class="row" id="supplierForm">
                             <section id="sec1Supplier" class="col-md-4 mt-3">
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="Supplier_code">Supplier code</label>
-                                    <input type="text" name="Supplier_code" class="form-control" readonly id="Supplier_code"
+                                    <input type="text" name="code" class="form-control" readonly id="Supplier_code"
                                            placeholder="S00-001">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="supplier_name">Supplier name</label>
-                                    <input type="text" name="supplier_name" class="form-control" id="supplier_name"
+                                    <input type="text" name="name" class="form-control" id="supplier_name"
                                            placeholder="Supplier Name">
                                     <span class="control-error"></span>
                                 </div>
 
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="S_category">Category</label>
-                                    <select class="form-control" id="S_category" name="S_category">
+                                    <select class="form-control" id="S_category" name="category">
                                         <option value="LOCAL">LOCAL</option>
                                         <option value="INTERNATIONAL">INTERNATIONAL</option>
 
                                     </select>
-                                    <!--                  <input type="text" name="lastName" class="form-control" id="lastName"-->
-                                    <!--                         placeholder="Last Name">-->
                                     <span class="control-error"></span>
                                 </div>
 
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="supplier_address_01">Address 01</label>
-                                    <input type="text" name="supplier_address_01" class="form-control" id="supplier_address_01"
+                                    <input type="text" name="address1" class="form-control" id="supplier_address_01"
                                            placeholder="Address 01">
                                     <span class="control-error"></span>
                                 </div>
 
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="supplier_address_02">Address 02</label>
-                                    <input type="text" name="supplier_address_02" class="form-control" id="supplier_address_02"
+                                    <input type="text" name="address2" class="form-control" id="supplier_address_02"
                                            placeholder="Address 02">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="supplier_address_03">Address 03</label>
-                                    <input type="text" name="supplier_address_03" class="form-control" id="supplier_address_03"
+                                    <input type="text" name="address3" class="form-control" id="supplier_address_03"
                                            placeholder="Address 03">
                                     <span class="control-error"></span>
                                 </div>
-
-
                             </section>
 
                             <section id="sec2Supplier" class="col-md-4 mt-3">
 
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="supplier_address_04">Address 04</label>
-                                    <input type="text" name="supplier_address_04" class="form-control" id="supplier_address_04"
+                                    <input type="text" name="address4" class="form-control" id="supplier_address_04"
                                            placeholder="Address 04">
                                     <span class="control-error"></span>
                                 </div>
 
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="supplier_address_05">Address 05</label>
-                                    <input type="text" name="supplier_address_05" class="form-control" id="supplier_address_05"
+                                    <input type="text" name="address5" class="form-control" id="supplier_address_05"
                                            placeholder="Address 05">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="su_conatct_01">Contact No 01</label>
-                                    <input type="text" name="su_conatct_01" class="form-control" id="su_conatct_01"
+                                    <input type="text" name="contact1" class="form-control" id="su_conatct_01"
                                            placeholder="Contact No 01">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="su_conatct_02">Contact No 02</label>
-                                    <input type="text" name="su_conatct_02" class="form-control" id="su_conatct_02"
+                                    <input type="text" name="contact2" class="form-control" id="su_conatct_02"
                                            placeholder="Contact No 02">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="sup_email">Email</label>
-                                    <input type="text" name="sup_email" class="form-control" id="sup_email"
+                                    <input type="text" name="email" class="form-control" id="sup_email"
                                            placeholder="Email">
                                     <span class="control-error"></span>
                                 </div>
 
-
-
-
-
-
                             </section>
 
                             <section id="Supsec3" class="col-md-4 mt-3">
-<!--                                <div class="mb-sm-0">-->
-<!--                                    <label class="form-label" for="email.">Email</label>-->
-<!--                                    <input type="text" name="Email" class="form-control" id="email."-->
-<!--                                           placeholder="Email">-->
-<!--                                    <span class="control-error"></span>-->
-<!--                                </div>-->
-<!--                                <div class="mb-sm-0">-->
-<!--                                    <label class="form-label" for="ICE">Inform in case of-->
-<!--                                        emergency</label>-->
-<!--                                    <input type="text" name="ICE" class="form-control" id="ICE">-->
-<!--                                    <span class="control-error"></span>-->
-<!--                                </div>-->
-
-<!--                                <div class="mb-sm-0">-->
-<!--                                    <label class="form-label" for="contct">Emergency Contact</label>-->
-<!--                                    <input type="text" name="contct" class="form-control" id="contct"-->
-<!--                                           placeholder="Contact">-->
-<!--                                    <span class="control-error"></span>-->
-<!--                                </div>-->
-                                <!--                <div class="mb-sm-0">-->
-                                <!--                  <label for="role_Type" class="form-label">Role type</label>-->
-                                <!--&lt;!&ndash;                  <select class="form-control" id="role_Type" name="role_Type">&ndash;&gt;-->
-                                <!--&lt;!&ndash;                    <option value="REGISTERED_USER">REGISTERED_USER</option>&ndash;&gt;-->
-                                <!--&lt;!&ndash;                  </select>&ndash;&gt;-->
-                                <!--                  <span class="control-error"></span>-->
-                                <!--                </div>-->
-                                <!--                <div class="mb-sm-0 mt-3">-->
-                                <!--                  <label for="user_Name" class="form-label">User Name</label>-->
-                                <!--                  <div class="input-group has-validation">-->
-                                <!--                    <span class="input-group-text" id="inputGroupPrepend">@</span>-->
-                                <!--                    <input type="text" name="user_Name" class="form-control" id="user_Name"-->
-                                <!--                           placeholder="User Name">-->
-                                <!--                    <span class="control-error"></span>-->
-                                <!--                  </div>-->
-                                <!--                </div>-->
-                                <!--                <div class="mb-sm-0 mt-3">-->
-                                <!--                  <label class="form-label" for="password">Password</label>-->
-                                <!--                  <input type="password" name="password" class="form-control" id="password"-->
-                                <!--                         placeholder="Enter Password">-->
-                                <!--                  <span class="control-error"></span>-->
-                                <!--                </div>-->
                                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                                     <button class="btn btn-success me-md-1" id="btnAddSupplier" type="button">Add</button>
                                     <button class="btn btn-warning me-md-1" id="btnUpdateSupplier" type="button">Update</button>
@@ -518,13 +469,7 @@
                                         <th scope="col">Supplier code</th>
                                         <th scope="col">Supplier name</th>
                                         <th scope="col">Category</th>
-                                        <th scope="col">Gender</th>
                                         <th scope="col">Address</th>
-<!--                                        <th scope="col">Address Line 02</th>-->
-<!--                                        <th scope="col">Address Line 03</th>-->
-<!--                                        <th scope="col">Address Line 04</th>-->
-<!--                                        <th scope="col">Address Line 05</th>-->
-<!--                                        <th scope="col">Address Line 06</th>-->
                                         <th scope="col">Contact 01</th>
                                         <th scope="col">Contact 02</th>
                                         <th scope="col">Email</th>
@@ -543,6 +488,7 @@
     <!-- End Customer Manage -->
 
 </main>
+
 <!-- End #main -->
 
 <!-- ======= Footer ======= -->
@@ -568,8 +514,10 @@
 <script src="../../assets/js/dashboardMain.js"></script>
 
 <!-- Controller JS File -->
-<script src="../../controller/Reg_UserController.js"></script>
-<script src="../../controller/DashBoardController.js"></script>
+<!--<script src="../../controller/Reg_UserController.js"></script>-->
+<!--<script src="../../controller/DashBoardController.js"></script>-->
+
+<script src="../../controller/SupplierController.js"></script>
 
 
 <!-- Util JS File -->
