--- a/Fronte_End/pages/adminPages/Inventory.html
+++ b/Fronte_End/pages/adminPages/Inventory.html
@@ -27,6 +27,7 @@
     <!-- Template Dashboard CSS File -->
     <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -365,38 +366,54 @@
                     <div class="col-12 m-3 p-1">
                         <form class="row" id="InventoryForm">
                             <section id="sec1Inventory" class="col-md-4 mt-3">
-                                <div class="mb-sm-0">
-                                    <label class="form-label" for="In_Item_code">Item code</label>
-                                    <input type="text" name="In_Item_code" class="form-control" readonly id="In_Item_code"
-                                           placeholder="I00-001">
+                                <div class="mb-sm-0 mt-3">
+                                    <label class="form-label" for="item_code">Item Code</label>
+                                    <input type="text" name="code" class="form-control" id="item_code"
+                                           placeholder="Item Code">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="inv_Item_Desc">Item Desc</label>
-                                    <input type="text" name="inv_Item_Desc" class="form-control" id="inv_Item_Desc"
+                                    <input type="text" name="Name" class="form-control" id="inv_Item_Desc"
                                            placeholder="Item Desc">
+                                    <span class="control-error"></span>
+                                </div>
+                                <div class="mb-sm-0 mt-3">
+                                    <label class="form-label" for="inv_qty">Item Desc</label>
+                                    <input type="text" name="qty" class="form-control" id="inv_qty"
+                                           placeholder="Item QTY">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3 col-md-11">
                                     <label class="form-label" for="inv_Item_pic">Item picture</label>
-                                    <input class="form-control" id="inv_Item_pic" type="file" name="inv_Item_pic">
+                                    <input class="form-control" id="inv_Item_pic" type="file" name="itemPicture">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="inv_Category">Category</label>
-                                    <input type="text" name="inv_Category" class="form-control" id="inv_Category"
-                                           placeholder="Category">
+                                    <select class="form-control" id="inv_Category" name="shoeType">
+                                        <option value="MEN">MEN</option>
+                                        <option value="WOMEN">WOMEN</option>
+
+                                    </select>
+                                    <span class="control-error"></span>
+                                </div>
+                                <div class="mb-sm-0 mt-3">
+                                    <label class="form-label" for="size">Category</label>
+                                    <input type="text" name="size" class="form-control" id="size"
+                                           placeholder="SIZE">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="inv_Supplier_Code">Supplier Code</label>
-                                    <input type="text" name="inv_Supplier_Code" class="form-control" readonly id="inv_Supplier_Code"
-                                           placeholder="S00-001">
+                                    <select class="form-control" id="inv_Supplier_Code" name="supplier">
+
+                                    </select>
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="inv_Supplier_name">Supplier name</label>
-                                    <input type="text" name="inv_Supplier_name" class="form-control" readonly id="inv_Supplier_name"
+                                    <input type="text" name="supName" class="form-control"  id="inv_Supplier_name"
                                            placeholder="Supplier name">
                                     <span class="control-error"></span>
                                 </div>
@@ -406,29 +423,29 @@
                             <section id="sec2Inventory" class="col-md-4 mt-3">
                                 <div class="mb-sm-0">
                                     <label class="form-label" for="inv_Unit_price">Unit price-Sale</label>
-                                    <input type="text" name="inv_Unit_price" class="form-control" id="inv_Unit_price"
+                                    <input type="text" name="salePrice" class="form-control" id="inv_Unit_price"
                                            placeholder="Unit price-Sale">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="unit_price_Buy">unit price-Buy</label>
-                                    <input type="text" name="unit_price_Buy" class="form-control" id="unit_price_Buy"
+                                    <input type="text" name="buyPrice" class="form-control" id="unit_price_Buy"
                                            placeholder="unit price-Buy">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="Expected_Profit">Expected Profit</label>
-                                    <input type="text" name="Expected_Profit" class="form-control" id="Expected_Profit">
+                                    <input type="text" name="expectedProfit" class="form-control"  id="Expected_Profit">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="Profit_margin">Profit margin</label>
-                                    <input type="text" name="Profit_margin" class="form-control" id="Profit_margin">
+                                    <input type="text" name="profitMargin" class="form-control"  id="Profit_margin">
                                     <span class="control-error"></span>
                                 </div>
                                 <div class="mb-sm-0 mt-3">
                                     <label class="form-label" for="Inv_Status">Status</label>
-                                    <input type="text" name="Inv_Status" class="form-control" id="Inv_Status">
+                                    <input type="text" name="status" class="form-control" id="Inv_Status">
                                     <span class="control-error"></span>
                                 </div>
 
@@ -458,6 +475,12 @@
                                 <!--                         placeholder="Enter Password">-->
                                 <!--                  <span class="control-error"></span>-->
                                 <!--                </div>-->
+
+                                <img id="img" src="../../assets/img/nethmi.jpg" width="300px">
+
+                                <input type="file" id="imgInput" accept="image/*" style="display: none">
+
+
                                 <div class="mt-4 mb-3 d-grid gap-2 d-sm-flex justify-content-md-center">
                                     <button class="btn btn-success me-md-1" id="btnAddInventory" type="button">Add</button>
                                     <button class="btn btn-warning me-md-1" id="btnUpdateInventory" type="button">Update</button>
@@ -479,7 +502,7 @@
                                     <tr>
                                         <th scope="col">Item code</th>
                                         <th scope="col">Item Desc</th>
-                                        <th scope="col">Item picture</th>
+                                        <th scope="col">QTY</th>
                                         <th scope="col">Category</th>
                                         <th scope="col">Size</th>
                                         <th scope="col">Supplier Code</th>
@@ -529,8 +552,8 @@
 <script src="../../assets/js/dashboardMain.js"></script>
 
 <!-- Controller JS File -->
-<script src="../../controller/Reg_UserController.js"></script>
-<script src="../../controller/DashBoardController.js"></script>
+<script src="../../controller/ItemController.js"></script>
+
 
 
 <!-- Util JS File -->
