--- a/Fronte_End/pages/userPages/SupplierDetails.html
+++ b/Fronte_End/pages/userPages/SupplierDetails.html
@@ -27,6 +27,7 @@
   <!-- Template Dashboard CSS File -->
   <link href="../../assets/css/dashboardStyle.css" rel="stylesheet">
 
+
 </head>
 <body>
 <!-- ======= Header ======= -->
@@ -365,19 +366,14 @@
                 <tr>
                   <th scope="col">Supplier code</th>
                   <th scope="col">Supplier name</th>
-                  <th scope="col">Category </th>
-                  <th scope="col">Address Line 01 </th>
-                  <th scope="col">Address Line 02</th>
-                  <th scope="col">Address Line 03</th>
-                  <th scope="col">Address Line 04</th>
-                  <th scope="col">Address Line 05</th>
-                  <th scope="col">Address Line 06</th>
-                  <th scope="col">Contact No.1</th>
-                  <th scope="col">Contact No.2</th>
-                  <th scope="col">email</th>
+                  <th scope="col">Category</th>
+                  <th scope="col">Address</th>
+                  <th scope="col">Contact 01</th>
+                  <th scope="col">Contact 02</th>
+                  <th scope="col">Email</th>
                 </tr>
                 </thead>
-                <tbody id="tblSupplierDetails"></tbody>
+                <tbody id="supplierTable"></tbody>
               </table>
             </div>
           </div>
@@ -568,8 +564,7 @@
 <script src="../../assets/js/dashboardMain.js"></script>
 
 <!-- Controller JS File -->
-<script src="../../controller/Reg_UserController.js"></script>
-<script src="../../controller/DashBoardController.js"></script>
+<script src="../../controller/SupplierDetailsController.js"></script>
 
 
 <!-- Util JS File -->
