--- a/Fronte_End/pages/userPages/EmployeeDetails.html
+++ b/Fronte_End/pages/userPages/EmployeeDetails.html
@@ -349,7 +349,7 @@
             <div class="card info-card">
                 <div class="search-bar mt-4">
                     <div class="search-form d-flex align-items-center">
-                        <input type="search" name="user_Id" id="search_Id" placeholder="Search" title="Enter search keyword">
+                        <input type="search" name="user_Id" id="search_EmployeeId" placeholder="Search" title="Enter search keyword">
                         <button type="button" title="Search"><i class="bi bi-search"></i></button>
                     </div>
                 </div>
