--- a/Fronte_End/pages/userPages/SupplierDetails.html
+++ b/Fronte_End/pages/userPages/SupplierDetails.html
@@ -349,7 +349,7 @@
       <div class="card info-card">
         <div class="search-bar mt-4">
           <div class="search-form d-flex align-items-center">
-            <input type="search" name="sup_d_id" id="sup_d_id" placeholder="Search" title="Enter search keyword">
+            <input type="search" name="supplier_Id" id="sup_d_id" placeholder="Search" title="Enter search keyword">
             <button type="button" title="Search"><i class="bi bi-search"></i></button>
           </div>
         </div>
